<resources>
    <string name="app_name" translatable="false">Organizze</string>
    <string name="onboarding_one_title">Organizze sus gastos,\ndondequiera que esté</string>
    <string name="onboarding_one_subtitle">Simple, gratis y fácil de usar</string>
    <string name="onboarding_two_title">Averigüe a dónde\nva su dinero</string>
    <string name="onboarding_two_subtitle">Categorice sus gastos y descubra\nel destino de cada centavo</string>
    <string name="onboarding_three_title">Nunca olvide pagar una\ncuenta de nuevo</string>
    <string name="onboarding_three_subtitle">Le recordamos cuándo debe pargar\nsus cuentas, y nunca se retrasará\nen ningún pago</string>
    <string name="onboarding_four_title">Todo alrededor de su vida</string>
    <string name="onboarding_four_subtitle">Utilice la aplicación en su teléfono,\n inteligente u ordenador, dondequiera\nque esté</string>
    <string name="skip">Skip</string>
    <string name="register">Registre su cuenta gratis</string>
    <string name="join">Únase a más de un millón de personas\ny comience de inmediato</string>
    <string name="sign_up">Registro</string>
    <string name="i_have_account">Ya tengo una cuenta</string>
    <string name="terms">Términos de servicio</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="name">Nombre</string>
    <string name="login">Iniciar sesión</string>
    <string name="forget_password">Olvidé mi contraseña</string>
    <string name="enter">Entrar</string>
    <string name="email_already_exists">Ya existe una cuenta asociada a este correo electrónico</string>
    <string name="error">Ocurrió un error inesperado, intente nuevamente</string>
    <string name="please_add_email">Por favor ingrese un email</string>
    <string name="please_add_password">Por favor ingrese una contraseña</string>
    <string name="check_your_info">Por favor verifique que sus datos sean correctos</string>
    <string name="please_add_name">Por favor ingrese su nombre</string>
    <string name="weak_password">Contraseña muy débil</string>
    <string name="invalid_email">E-mail invalido</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="not_found_user">Usuario no registrado</string>
    <string name="wrong_password">Contraseña incorrecta</string>
    <string name="incomes">Ingresos</string>
    <string name="expense">Gastos</string>
    <string name="Date">Fecha</string>
    <string name="category">Categoria</string>
    <string name="description">Descripción</string>
    <string name="zeros">$ 0,00</string>
    <string name="add_value">Por favor agrege una cantidad de dinero</string>
    <string name="add_date">Por favor añada una fecha</string>
    <string name="add_category">Por favor añada una categoria</string>
    <string name="add_description">Por favor añada una descripción</string>
    <string name="balances_total">Saldo Total</string>
    <string name="greeting">Hola!,</string>
    <string name="exit">Salir</string>
    <string name="delete_transaction">¿Está seguro que desea borrar este moviemiento?</string>
    <string name="yes">Si</string>
    <string name="cancel">Cancelar</string>
</resources>
