<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_go_to_sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_go_to_sign_up"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/primary_text"
            android:layout_marginTop="32dp"/>

    <TextView
            android:text="@string/join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintBottom_toTopOf="@+id/btn_go_to_sign_up"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_go_to_sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_go_to_sign_up"
            android:textAlignment="center"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textColor="@color/secondary_text"/>

    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_go_to_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/tv_go_to_login"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/color_primary"
            android:minHeight="56dp"
            android:layout_marginTop="26dp"
            android:onClick="goToRegister"/>

    <TextView
            android:text="@string/i_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_go_to_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_go_to_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/btn_go_to_sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_go_to_sign_up"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textSize="16sp"
            android:textColor="@color/secondary_text"
            android:onClick="goToLogin"/>
</android.support.constraint.ConstraintLayout>