<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".activities.SignUpActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_register"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_name_sign_up"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="48dp"
            app:layout_constraintStart_toStartOf="@+id/et_name_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/et_name_sign_up"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_sans_bold"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:ems="10"
            android:id="@+id/et_name_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@+id/et_email_sign_up"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/et_email_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/et_email_sign_up"
            android:hint="@string/name"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints=""
            tools:targetApi="o"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_email_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/et_name_sign_up"
            app:layout_constraintBottom_toTopOf="@+id/et_password_sign_up"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/et_password_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/et_password_sign_up"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints=""
            tools:targetApi="o"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/et_email_sign_up"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
            android:hint="@string/password"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints=""
            tools:targetApi="o"/>

    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/et_password_sign_up"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/color_primary"
            android:textColor="@android:color/white"
            android:minHeight="56dp"/>

    <TextView
            android:text="@string/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textSize="18sp"
            android:textColor="@color/secondary_text"/>

</android.support.constraint.ConstraintLayout>