<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intro.RegisterActivity"
        android:focusableInTouchMode="true"
        tools:layout_editor_absoluteY="25dp">

    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_sans_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_email_login"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="@+id/et_email_login"
            app:layout_constraintEnd_toEndOf="@+id/et_email_login"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_email_login"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints=""
            tools:targetApi="o"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@+id/et_password_login"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/et_password_login"
            app:layout_constraintEnd_toEndOf="@+id/et_password_login"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password_login"
            android:hint="@string/password"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints=""
            tools:targetApi="o"
            app:layout_constraintTop_toBottomOf="@+id/et_email_login"
            app:layout_constraintBottom_toTopOf="@+id/btn_enter_login"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="@+id/btn_enter_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_enter_login"/>

    <Button
            android:text="@string/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_enter_login"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:minHeight="56dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password_login"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_enter_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_enter_login"
            app:layout_constraintStart_toStartOf="@+id/btn_enter_login"
            android:textColor="@color/secondary_text"/>

    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
</android.support.constraint.ConstraintLayout>