<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/onboarding_one"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="56dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:paddingTop="28dp"
            android:layout_marginTop="32dp"/>

    <TextView
            android:text="@string/onboarding_one_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/nunito_sans_bold"/>

    <TextView
            android:text="@string/onboarding_one_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textSize="16sp"/>

</android.support.constraint.ConstraintLayout>