<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HomeActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            android:background="@color/color_primary"
            />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/color_primary"
            android:gravity="center"
            android:id="@+id/linear_layout"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_greeting"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                tools:text="Hola, Christian"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textSize="20sp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_balance"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:text="@string/zeros"
                android:fontFamily="@font/nunito_sans_bold"
                android:textSize="30sp"
                />

        <TextView
                android:text="@string/balances_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textSize="18sp"/>
    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:mcv_showOtherDates="all"
            app:mcv_selectionColor="#00F"
            app:mcv_tileSize="56dp"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/calendar_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/rv_month_transactions"/>

    <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu_colorNormal="@color/color_accent"
            app:menu_colorPressed="@color/color_accent"
            fab:menu_icon="@drawable/ic_add">

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                fab:fab_colorNormal="@color/color_primary_expense"
                fab:fab_label="@string/expense"
                fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_incomes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                fab:fab_colorNormal="@color/color_primary_dark_income"
                fab:fab_label="@string/incomes"
                fab:fab_size="mini"/>

    </com.github.clans.fab.FloatingActionMenu>


</android.support.constraint.ConstraintLayout>